[tool.poetry]
name = "utils-module"
version = "0.1.5"
description = ""
authors = ["parkyoungjin-888 <pyj8813@gmail.com>"]
readme = "README.md"
exclude = ["cache_file"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
boto3 = "^1.38.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
